--- a/Server/Views/Home/Index.cshtml
+++ b/Server/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Server Home Page";
 }
 
-<h1>Home Page</h1>
+<h1>Server Home Page</h1>
 
