--- a/Server/Views/Home/Secret.cshtml
+++ b/Server/Views/Home/Secret.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewData["Title"] = "Secret";
+    ViewData["Title"] = "Server Secret Page ";
 }
 
-<h1>Secret Page</h1>
+<h1>Server Secret Page</h1>
 
